--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -37,11 +37,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3b2505f5-edb3-4c88-81c1-f612770f2f43",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'hii'"
+      ],
+      "text/latex": [
+       "'hii'"
+      ],
+      "text/markdown": [
+       "'hii'"
+      ],
+      "text/plain": [
+       "[1] \"hii\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "g <- \"hii\"\n",
+    "g"
+   ]
   },
   {
    "cell_type": "code",
