--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "80c2aeb0-3634-4513-b50e-099ba7ed9c2b",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "5c291735-17f2-4e48-a23d-acbb3bd3c9a2",
    "metadata": {},
    "outputs": [
@@ -160,64 +160,71 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[22mAdding missing grouping variables: `replicate`\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 111 × 3</caption>\n",
+       "<caption>A grouped_df: 100 × 4</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>experience</th><th scope=col>played_hours</th><th scope=col>Age</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>replicate</th><th scope=col>experience</th><th scope=col>played_hours</th><th scope=col>Age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>Pro    </td><td>30.3</td><td> 9</td></tr>\n",
-       "\t<tr><td>Veteran</td><td> 3.8</td><td>17</td></tr>\n",
-       "\t<tr><td>Amateur</td><td> 0.7</td><td>21</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>Veteran</td><td>0.3</td><td>22</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>2.3</td><td>17</td></tr>\n",
-       "\t<tr><td>Pro    </td><td>0.2</td><td>NA</td></tr>\n",
+       "\t<tr><td>1</td><td>Regular</td><td>178.2</td><td>19</td></tr>\n",
+       "\t<tr><td>1</td><td>Pro    </td><td>  0.6</td><td>19</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td>  0.1</td><td>44</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>1</td><td>Amateur</td><td> 0.0</td><td>21</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td> 0.3</td><td>22</td></tr>\n",
+       "\t<tr><td>1</td><td>Amateur</td><td>17.2</td><td>14</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 111 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " experience & played\\_hours & Age\\\\\n",
-       " <chr> & <dbl> & <dbl>\\\\\n",
+       "A grouped\\_df: 100 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " replicate & experience & played\\_hours & Age\\\\\n",
+       " <int> & <chr> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t Pro     & 30.3 &  9\\\\\n",
-       "\t Veteran &  3.8 & 17\\\\\n",
-       "\t Amateur &  0.7 & 21\\\\\n",
-       "\t ⋮ & ⋮ & ⋮\\\\\n",
-       "\t Veteran & 0.3 & 22\\\\\n",
-       "\t Amateur & 2.3 & 17\\\\\n",
-       "\t Pro     & 0.2 & NA\\\\\n",
+       "\t 1 & Regular & 178.2 & 19\\\\\n",
+       "\t 1 & Pro     &   0.6 & 19\\\\\n",
+       "\t 1 & Veteran &   0.1 & 44\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 1 & Amateur &  0.0 & 21\\\\\n",
+       "\t 1 & Veteran &  0.3 & 22\\\\\n",
+       "\t 1 & Amateur & 17.2 & 14\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 111 × 3\n",
+       "A grouped_df: 100 × 4\n",
        "\n",
-       "| experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| Pro     | 30.3 |  9 |\n",
-       "| Veteran |  3.8 | 17 |\n",
-       "| Amateur |  0.7 | 21 |\n",
-       "| ⋮ | ⋮ | ⋮ |\n",
-       "| Veteran | 0.3 | 22 |\n",
-       "| Amateur | 2.3 | 17 |\n",
-       "| Pro     | 0.2 | NA |\n",
+       "| replicate &lt;int&gt; | experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 1 | Regular | 178.2 | 19 |\n",
+       "| 1 | Pro     |   0.6 | 19 |\n",
+       "| 1 | Veteran |   0.1 | 44 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 1 | Amateur |  0.0 | 21 |\n",
+       "| 1 | Veteran |  0.3 | 22 |\n",
+       "| 1 | Amateur | 17.2 | 14 |\n",
        "\n"
       ],
       "text/plain": [
-       "    experience played_hours Age\n",
-       "1   Pro        30.3          9 \n",
-       "2   Veteran     3.8         17 \n",
-       "3   Amateur     0.7         21 \n",
-       "⋮   ⋮          ⋮            ⋮  \n",
-       "109 Veteran    0.3          22 \n",
-       "110 Amateur    2.3          17 \n",
-       "111 Pro        0.2          NA "
+       "    replicate experience played_hours Age\n",
+       "1   1         Regular    178.2        19 \n",
+       "2   1         Pro          0.6        19 \n",
+       "3   1         Veteran      0.1        44 \n",
+       "⋮   ⋮         ⋮          ⋮            ⋮  \n",
+       "98  1         Amateur     0.0         21 \n",
+       "99  1         Veteran     0.3         22 \n",
+       "100 1         Amateur    17.2         14 "
       ]
      },
      "metadata": {},
@@ -227,61 +234,61 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 82 × 3</caption>\n",
+       "<caption>A grouped_df: 73 × 4</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>experience</th><th scope=col>played_hours</th><th scope=col>Age</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>replicate</th><th scope=col>experience</th><th scope=col>played_hours</th><th scope=col>Age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>Amateur</td><td>0.1</td><td>17</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>0.2</td><td>22</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>0.5</td><td>17</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>Veteran</td><td> 2.7</td><td>21</td></tr>\n",
-       "\t<tr><td>Amateur</td><td> 2.1</td><td>24</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>32.0</td><td>22</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td>0.1</td><td>17</td></tr>\n",
+       "\t<tr><td>1</td><td>Amateur</td><td>0.0</td><td>17</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td>0.0</td><td>21</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>1</td><td>Regular</td><td>223.1</td><td>17</td></tr>\n",
+       "\t<tr><td>1</td><td>Amateur</td><td>  1.8</td><td>23</td></tr>\n",
+       "\t<tr><td>1</td><td>Amateur</td><td> 17.2</td><td>14</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 82 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " experience & played\\_hours & Age\\\\\n",
-       " <chr> & <dbl> & <dbl>\\\\\n",
+       "A grouped\\_df: 73 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " replicate & experience & played\\_hours & Age\\\\\n",
+       " <int> & <chr> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t Amateur & 0.1 & 17\\\\\n",
-       "\t Amateur & 0.2 & 22\\\\\n",
-       "\t Amateur & 0.5 & 17\\\\\n",
-       "\t ⋮ & ⋮ & ⋮\\\\\n",
-       "\t Veteran &  2.7 & 21\\\\\n",
-       "\t Amateur &  2.1 & 24\\\\\n",
-       "\t Amateur & 32.0 & 22\\\\\n",
+       "\t 1 & Veteran & 0.1 & 17\\\\\n",
+       "\t 1 & Amateur & 0.0 & 17\\\\\n",
+       "\t 1 & Veteran & 0.0 & 21\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 1 & Regular & 223.1 & 17\\\\\n",
+       "\t 1 & Amateur &   1.8 & 23\\\\\n",
+       "\t 1 & Amateur &  17.2 & 14\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 82 × 3\n",
+       "A grouped_df: 73 × 4\n",
        "\n",
-       "| experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| Amateur | 0.1 | 17 |\n",
-       "| Amateur | 0.2 | 22 |\n",
-       "| Amateur | 0.5 | 17 |\n",
-       "| ⋮ | ⋮ | ⋮ |\n",
-       "| Veteran |  2.7 | 21 |\n",
-       "| Amateur |  2.1 | 24 |\n",
-       "| Amateur | 32.0 | 22 |\n",
+       "| replicate &lt;int&gt; | experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 1 | Veteran | 0.1 | 17 |\n",
+       "| 1 | Amateur | 0.0 | 17 |\n",
+       "| 1 | Veteran | 0.0 | 21 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 1 | Regular | 223.1 | 17 |\n",
+       "| 1 | Amateur |   1.8 | 23 |\n",
+       "| 1 | Amateur |  17.2 | 14 |\n",
        "\n"
       ],
       "text/plain": [
-       "   experience played_hours Age\n",
-       "1  Amateur    0.1          17 \n",
-       "2  Amateur    0.2          22 \n",
-       "3  Amateur    0.5          17 \n",
-       "⋮  ⋮          ⋮            ⋮  \n",
-       "80 Veteran     2.7         21 \n",
-       "81 Amateur     2.1         24 \n",
-       "82 Amateur    32.0         22 "
+       "   replicate experience played_hours Age\n",
+       "1  1         Veteran    0.1          17 \n",
+       "2  1         Amateur    0.0          17 \n",
+       "3  1         Veteran    0.0          21 \n",
+       "⋮  ⋮         ⋮          ⋮            ⋮  \n",
+       "71 1         Regular    223.1        17 \n",
+       "72 1         Amateur      1.8        23 \n",
+       "73 1         Amateur     17.2        14 "
       ]
      },
      "metadata": {},
@@ -291,61 +298,61 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 29 × 3</caption>\n",
+       "<caption>A grouped_df: 27 × 4</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>experience</th><th scope=col>played_hours</th><th scope=col>Age</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>replicate</th><th scope=col>experience</th><th scope=col>played_hours</th><th scope=col>Age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>Regular </td><td>0.1</td><td>21</td></tr>\n",
-       "\t<tr><td>Amateur </td><td>0.1</td><td>17</td></tr>\n",
-       "\t<tr><td>Beginner</td><td>1.0</td><td>17</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>Veteran</td><td>0.3</td><td>22</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>2.3</td><td>17</td></tr>\n",
-       "\t<tr><td>Pro    </td><td>0.2</td><td>NA</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td>0.1</td><td>44</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td>0.0</td><td>17</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran</td><td>0.2</td><td>38</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>1</td><td>Veteran </td><td>2.2</td><td>24</td></tr>\n",
+       "\t<tr><td>1</td><td>Regular </td><td>0.2</td><td>14</td></tr>\n",
+       "\t<tr><td>1</td><td>Beginner</td><td>0.0</td><td>17</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 29 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " experience & played\\_hours & Age\\\\\n",
-       " <chr> & <dbl> & <dbl>\\\\\n",
+       "A grouped\\_df: 27 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " replicate & experience & played\\_hours & Age\\\\\n",
+       " <int> & <chr> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t Regular  & 0.1 & 21\\\\\n",
-       "\t Amateur  & 0.1 & 17\\\\\n",
-       "\t Beginner & 1.0 & 17\\\\\n",
-       "\t ⋮ & ⋮ & ⋮\\\\\n",
-       "\t Veteran & 0.3 & 22\\\\\n",
-       "\t Amateur & 2.3 & 17\\\\\n",
-       "\t Pro     & 0.2 & NA\\\\\n",
+       "\t 1 & Veteran & 0.1 & 44\\\\\n",
+       "\t 1 & Veteran & 0.0 & 17\\\\\n",
+       "\t 1 & Veteran & 0.2 & 38\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 1 & Veteran  & 2.2 & 24\\\\\n",
+       "\t 1 & Regular  & 0.2 & 14\\\\\n",
+       "\t 1 & Beginner & 0.0 & 17\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 29 × 3\n",
+       "A grouped_df: 27 × 4\n",
        "\n",
-       "| experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| Regular  | 0.1 | 21 |\n",
-       "| Amateur  | 0.1 | 17 |\n",
-       "| Beginner | 1.0 | 17 |\n",
-       "| ⋮ | ⋮ | ⋮ |\n",
-       "| Veteran | 0.3 | 22 |\n",
-       "| Amateur | 2.3 | 17 |\n",
-       "| Pro     | 0.2 | NA |\n",
+       "| replicate &lt;int&gt; | experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 1 | Veteran | 0.1 | 44 |\n",
+       "| 1 | Veteran | 0.0 | 17 |\n",
+       "| 1 | Veteran | 0.2 | 38 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 1 | Veteran  | 2.2 | 24 |\n",
+       "| 1 | Regular  | 0.2 | 14 |\n",
+       "| 1 | Beginner | 0.0 | 17 |\n",
        "\n"
       ],
       "text/plain": [
-       "   experience played_hours Age\n",
-       "1  Regular    0.1          21 \n",
-       "2  Amateur    0.1          17 \n",
-       "3  Beginner   1.0          17 \n",
-       "⋮  ⋮          ⋮            ⋮  \n",
-       "27 Veteran    0.3          22 \n",
-       "28 Amateur    2.3          17 \n",
-       "29 Pro        0.2          NA "
+       "   replicate experience played_hours Age\n",
+       "1  1         Veteran    0.1          44 \n",
+       "2  1         Veteran    0.0          17 \n",
+       "3  1         Veteran    0.2          38 \n",
+       "⋮  ⋮         ⋮          ⋮            ⋮  \n",
+       "25 1         Veteran    2.2          24 \n",
+       "26 1         Regular    0.2          14 \n",
+       "27 1         Beginner   0.0          17 "
       ]
      },
      "metadata": {},
@@ -357,7 +364,7 @@
     "players\n",
     "\n",
     "players_select <- players |>\n",
-    "    filter(played_hours != 0.0) |>\n",
+    "    rep_sample_n(100) |>\n",
     "    select(experience, played_hours, Age)\n",
     "players_select\n",
     "\n",
@@ -370,10 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "1da2c07a-a16b-4fcf-ba4b-e4e3872dee0a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“The number of observations in each quantile is below the recommended threshold of 20.\n",
+      "\u001b[36m•\u001b[39m Stratification will use 3 breaks instead.”\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -382,8 +398,9 @@
        "\u001b[3mModel:\u001b[23m nearest_neighbor()\n",
        "\n",
        "── Preprocessor ────────────────────────────────────────────────────────────────\n",
-       "2 Recipe Steps\n",
+       "3 Recipe Steps\n",
        "\n",
+       "• step_dummy()\n",
        "• step_scale()\n",
        "• step_center()\n",
        "\n",
@@ -407,6 +424,7 @@
     "    set_mode(\"regression\") \n",
     "\n",
     "players_recipe <- recipe(played_hours ~ ., data = players_training) |>\n",
+    "    step_dummy(all_nominal_predictors(), -all_outcomes()) |>\n",
     "    step_scale(all_predictors()) |>\n",
     "    step_center(all_predictors())\n",
     "\n",
@@ -420,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5a9104e7-4728-4797-9775-7cc2c2457276",
    "metadata": {},
    "outputs": [
@@ -430,44 +448,37 @@
      "text": [
       "Warning message:\n",
       "“The `...` are not used in this function but one or more objects were passed: ''”\n",
-      "→ \u001b[31m\u001b[1mA\u001b[22m\u001b[39m | \u001b[31merror\u001b[39m:   \u001b[1m\u001b[33mError\u001b[39m in `step_scale()`:\u001b[22m\n",
-      "               \u001b[1mCaused by error in `prep()`:\u001b[22m\n",
-      "               \u001b[1m\u001b[22m\u001b[31m✖\u001b[39m All columns selected for the step should be double or integer.\n",
-      "               \u001b[36m•\u001b[39m 1 factor variable found: `experience`\n",
+      "→ \u001b[33m\u001b[1mA\u001b[22m\u001b[39m | \u001b[33mwarning\u001b[39m: \u001b[1m\u001b[22m\u001b[33m!\u001b[39m  The following column has zero variance so scaling cannot be used: replicate.\n",
+      "               \u001b[36mℹ\u001b[39m Consider using ?step_zv (`?recipes::step_zv()`) to remove those columns\n",
+      "                 before normalizing.\n",
       "\n",
-      "There were issues with some computations   \u001b[1m\u001b[31mA\u001b[39m\u001b[22m: x1\n",
+      "There were issues with some computations   \u001b[1m\u001b[33mA\u001b[39m\u001b[22m: x1\n",
       "\n",
-      "There were issues with some computations   \u001b[1m\u001b[31mA\u001b[39m\u001b[22m: x5\n",
+      "→ \u001b[33m\u001b[1mB\u001b[22m\u001b[39m | \u001b[33mwarning\u001b[39m: 96 samples were requested but there were 58 rows in the data. 53 will be used.\n",
       "\n",
+      "There were issues with some computations   \u001b[1m\u001b[33mA\u001b[39m\u001b[22m: x1\n",
+      "→ \u001b[31m\u001b[1mC\u001b[22m\u001b[39m | \u001b[31merror\u001b[39m:   \u001b[1m\u001b[22m\u001b[36mℹ\u001b[39m In index: 14.\n",
+      "               \u001b[1mCaused by error in `cl[C]`:\u001b[22m\n",
+      "               \u001b[33m!\u001b[39m only 0's may be mixed with negative subscripts\n",
       "\n",
-      "\n",
-      "Warning message:\n",
-      "“All models failed. Run `show_notes(.Last.tune.result)` for more information.”\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "\u001b[1m\u001b[33mError\u001b[39m in `estimate_tune_results()`:\u001b[22m\n\u001b[33m!\u001b[39m All models failed. Run `show_notes(.Last.tune.result)` for more information.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[33mError\u001b[39m in `estimate_tune_results()`:\u001b[22m\n\u001b[33m!\u001b[39m All models failed. Run `show_notes(.Last.tune.result)` for more information.\nTraceback:\n",
-      "1. collect_metrics(tune_grid(add_model(add_recipe(workflow(), players_recipe), \n .     players_spec), object = players_workflow, resamples = players_vfold, \n .     grid = gridvals))",
-      "2. collect_metrics.tune_results(tune_grid(add_model(add_recipe(workflow(), \n .     players_recipe), players_spec), object = players_workflow, \n .     resamples = players_vfold, grid = gridvals))",
-      "3. estimate_tune_results(x)",
-      "4. rlang::abort(\"All models failed. Run `show_notes(.Last.tune.result)` for more information.\")",
-      "5. signal_abort(cnd, .file)"
+      "There were issues with some computations   \u001b[1m\u001b[33mA\u001b[39m\u001b[22m: x1\n"
      ]
     }
    ],
    "source": [
-    "gridvals <- tibble(neighbors = seq(1,230))\n",
+    "gridvals <- tibble(neighbors = seq(from = 1, to = 100, by = 5))\n",
     "\n",
     "players_results <- workflow() |> \n",
     "    add_recipe(players_recipe) |> \n",
     "    add_model(players_spec) |>\n",
     "    tune_grid(object = players_workflow, resamples = players_vfold, grid = gridvals) |>\n",
     "    collect_metrics()\n",
-    "players_results"
+    "players_results\n",
+    "\n",
+    "players_min <- players_results |>\n",
+    "    filter(.metric == \"rmse\") |>\n",
+    "    slice_min(std_err, n = 1)\n",
+    "players_min"
    ]
   },
   {
