--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5c291735-17f2-4e48-a23d-acbb3bd3c9a2",
    "metadata": {},
    "outputs": [
@@ -233,13 +233,13 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>Veteran</td><td>0</td><td>17</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>0</td><td>17</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>0</td><td>21</td></tr>\n",
+       "\t<tr><td>Veteran</td><td>0.0</td><td>17</td></tr>\n",
+       "\t<tr><td>Regular</td><td>0.1</td><td>21</td></tr>\n",
+       "\t<tr><td>Amateur</td><td>0.0</td><td>17</td></tr>\n",
        "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>Veteran</td><td>2.7</td><td>21</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>2.1</td><td>24</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>0.8</td><td>22</td></tr>\n",
+       "\t<tr><td>Amateur</td><td>32.0</td><td>22</td></tr>\n",
+       "\t<tr><td>Pro    </td><td> 1.7</td><td>17</td></tr>\n",
+       "\t<tr><td>Amateur</td><td> 2.3</td><td>17</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -249,13 +249,13 @@
        " experience & played\\_hours & Age\\\\\n",
        " <chr> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t Veteran & 0 & 17\\\\\n",
-       "\t Amateur & 0 & 17\\\\\n",
-       "\t Amateur & 0 & 21\\\\\n",
+       "\t Veteran & 0.0 & 17\\\\\n",
+       "\t Regular & 0.1 & 21\\\\\n",
+       "\t Amateur & 0.0 & 17\\\\\n",
        "\t ⋮ & ⋮ & ⋮\\\\\n",
-       "\t Veteran & 2.7 & 21\\\\\n",
-       "\t Amateur & 2.1 & 24\\\\\n",
-       "\t Amateur & 0.8 & 22\\\\\n",
+       "\t Amateur & 32.0 & 22\\\\\n",
+       "\t Pro     &  1.7 & 17\\\\\n",
+       "\t Amateur &  2.3 & 17\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -264,24 +264,24 @@
        "\n",
        "| experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| Veteran | 0 | 17 |\n",
-       "| Amateur | 0 | 17 |\n",
-       "| Amateur | 0 | 21 |\n",
+       "| Veteran | 0.0 | 17 |\n",
+       "| Regular | 0.1 | 21 |\n",
+       "| Amateur | 0.0 | 17 |\n",
        "| ⋮ | ⋮ | ⋮ |\n",
-       "| Veteran | 2.7 | 21 |\n",
-       "| Amateur | 2.1 | 24 |\n",
-       "| Amateur | 0.8 | 22 |\n",
+       "| Amateur | 32.0 | 22 |\n",
+       "| Pro     |  1.7 | 17 |\n",
+       "| Amateur |  2.3 | 17 |\n",
        "\n"
       ],
       "text/plain": [
        "    experience played_hours Age\n",
-       "1   Veteran    0            17 \n",
-       "2   Amateur    0            17 \n",
-       "3   Amateur    0            21 \n",
+       "1   Veteran    0.0          17 \n",
+       "2   Regular    0.1          21 \n",
+       "3   Amateur    0.0          17 \n",
        "⋮   ⋮          ⋮            ⋮  \n",
-       "144 Veteran    2.7          21 \n",
-       "145 Amateur    2.1          24 \n",
-       "146 Amateur    0.8          22 "
+       "144 Amateur    32.0         22 \n",
+       "145 Pro         1.7         17 \n",
+       "146 Amateur     2.3         17 "
       ]
      },
      "metadata": {},
@@ -297,13 +297,13 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>Regular</td><td>0.1</td><td>21</td></tr>\n",
        "\t<tr><td>Regular</td><td>0.0</td><td>19</td></tr>\n",
        "\t<tr><td>Amateur</td><td>0.1</td><td>17</td></tr>\n",
+       "\t<tr><td>Pro    </td><td>0.0</td><td>17</td></tr>\n",
        "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>Pro    </td><td>1.7</td><td>17</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>0.0</td><td>20</td></tr>\n",
-       "\t<tr><td>Amateur</td><td>2.3</td><td>17</td></tr>\n",
+       "\t<tr><td>Beginner</td><td>0</td><td>17</td></tr>\n",
+       "\t<tr><td>Amateur </td><td>0</td><td>17</td></tr>\n",
+       "\t<tr><td>Amateur </td><td>0</td><td>17</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -313,13 +313,13 @@
        " experience & played\\_hours & Age\\\\\n",
        " <chr> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t Regular & 0.1 & 21\\\\\n",
        "\t Regular & 0.0 & 19\\\\\n",
        "\t Amateur & 0.1 & 17\\\\\n",
+       "\t Pro     & 0.0 & 17\\\\\n",
        "\t ⋮ & ⋮ & ⋮\\\\\n",
-       "\t Pro     & 1.7 & 17\\\\\n",
-       "\t Amateur & 0.0 & 20\\\\\n",
-       "\t Amateur & 2.3 & 17\\\\\n",
+       "\t Beginner & 0 & 17\\\\\n",
+       "\t Amateur  & 0 & 17\\\\\n",
+       "\t Amateur  & 0 & 17\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -328,24 +328,24 @@
        "\n",
        "| experience &lt;chr&gt; | played_hours &lt;dbl&gt; | Age &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| Regular | 0.1 | 21 |\n",
        "| Regular | 0.0 | 19 |\n",
        "| Amateur | 0.1 | 17 |\n",
+       "| Pro     | 0.0 | 17 |\n",
        "| ⋮ | ⋮ | ⋮ |\n",
-       "| Pro     | 1.7 | 17 |\n",
-       "| Amateur | 0.0 | 20 |\n",
-       "| Amateur | 2.3 | 17 |\n",
+       "| Beginner | 0 | 17 |\n",
+       "| Amateur  | 0 | 17 |\n",
+       "| Amateur  | 0 | 17 |\n",
        "\n"
       ],
       "text/plain": [
        "   experience played_hours Age\n",
-       "1  Regular    0.1          21 \n",
-       "2  Regular    0.0          19 \n",
-       "3  Amateur    0.1          17 \n",
+       "1  Regular    0.0          19 \n",
+       "2  Amateur    0.1          17 \n",
+       "3  Pro        0.0          17 \n",
        "⋮  ⋮          ⋮            ⋮  \n",
-       "48 Pro        1.7          17 \n",
-       "49 Amateur    0.0          20 \n",
-       "50 Amateur    2.3          17 "
+       "48 Beginner   0            17 \n",
+       "49 Amateur    0            17 \n",
+       "50 Amateur    0            17 "
       ]
      },
      "metadata": {},
@@ -353,6 +353,7 @@
     }
    ],
    "source": [
+    "set.seed(2000)\n",
     "players <- read_csv(\"players.csv\")\n",
     "players\n",
     "\n",
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "1da2c07a-a16b-4fcf-ba4b-e4e3872dee0a",
    "metadata": {},
    "outputs": [
@@ -421,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "5a9104e7-4728-4797-9775-7cc2c2457276",
    "metadata": {},
    "outputs": [
@@ -440,7 +441,15 @@
       "\n",
       "There were issues with some computations   \u001b[1m\u001b[31mA\u001b[39m\u001b[22m: x1\n",
       "\n",
-      "There were issues with some computations   \u001b[1m\u001b[31mA\u001b[39m\u001b[22m: x2\n",
+      "→ \u001b[31m\u001b[1mB\u001b[22m\u001b[39m | \u001b[31merror\u001b[39m:   \u001b[1m\u001b[22mAssigned data `orig_rows` must be compatible with existing data.\n",
+      "               \u001b[31m✖\u001b[39m Existing data has 27 rows.\n",
+      "               \u001b[31m✖\u001b[39m Assigned data has 28 rows.\n",
+      "               \u001b[36mℹ\u001b[39m Only vectors of size 1 are recycled.\n",
+      "               \u001b[1mCaused by error in `vectbl_recycle_rhs_rows()`:\u001b[22m\n",
+      "               \u001b[33m!\u001b[39m Can't recycle input of size 28 to size 27.\n",
+      "\n",
+      "There were issues with some computations   \u001b[1m\u001b[31mA\u001b[39m\u001b[22m: x1\n",
+      "There were issues with some computations   \u001b[1m\u001b[31mA\u001b[39m\u001b[22m: x1   \u001b[1m\u001b[31mB\u001b[39m\u001b[22m: x1\n",
       "\n",
       "\n",
       "\n"
@@ -456,13 +465,13 @@
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>1</td><td>rmse</td><td>standard</td><td>22.0498205</td><td>3</td><td>7.9897216</td><td>Preprocessor1_Model01</td></tr>\n",
-       "\t<tr><td>1</td><td>rsq </td><td>standard</td><td> 0.2695403</td><td>3</td><td>0.1673395</td><td>Preprocessor1_Model01</td></tr>\n",
-       "\t<tr><td>6</td><td>rmse</td><td>standard</td><td>17.0450682</td><td>3</td><td>6.8729549</td><td>Preprocessor1_Model02</td></tr>\n",
+       "\t<tr><td>1</td><td>rmse</td><td>standard</td><td>4.47149293</td><td>3</td><td>0.74484142</td><td>Preprocessor1_Model01</td></tr>\n",
+       "\t<tr><td>1</td><td>rsq </td><td>standard</td><td>0.02564307</td><td>3</td><td>0.01912864</td><td>Preprocessor1_Model01</td></tr>\n",
+       "\t<tr><td>6</td><td>rmse</td><td>standard</td><td>5.18000601</td><td>3</td><td>0.38360783</td><td>Preprocessor1_Model02</td></tr>\n",
        "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>91</td><td>rsq </td><td>standard</td><td> 0.02385847</td><td>3</td><td>0.019465916</td><td>Preprocessor1_Model19</td></tr>\n",
-       "\t<tr><td>96</td><td>rmse</td><td>standard</td><td>15.24773942</td><td>3</td><td>8.141423377</td><td>Preprocessor1_Model20</td></tr>\n",
-       "\t<tr><td>96</td><td>rsq </td><td>standard</td><td> 0.01252513</td><td>3</td><td>0.008630338</td><td>Preprocessor1_Model20</td></tr>\n",
+       "\t<tr><td>91</td><td>rsq </td><td>standard</td><td>0.03540785</td><td>3</td><td>0.01585044</td><td>Preprocessor1_Model19</td></tr>\n",
+       "\t<tr><td>96</td><td>rmse</td><td>standard</td><td>4.29485515</td><td>3</td><td>0.90738508</td><td>Preprocessor1_Model20</td></tr>\n",
+       "\t<tr><td>96</td><td>rsq </td><td>standard</td><td>0.02327623</td><td>3</td><td>0.01547871</td><td>Preprocessor1_Model20</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -472,13 +481,13 @@
        " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
        " <dbl> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
        "\\hline\n",
-       "\t 1 & rmse & standard & 22.0498205 & 3 & 7.9897216 & Preprocessor1\\_Model01\\\\\n",
-       "\t 1 & rsq  & standard &  0.2695403 & 3 & 0.1673395 & Preprocessor1\\_Model01\\\\\n",
-       "\t 6 & rmse & standard & 17.0450682 & 3 & 6.8729549 & Preprocessor1\\_Model02\\\\\n",
+       "\t 1 & rmse & standard & 4.47149293 & 3 & 0.74484142 & Preprocessor1\\_Model01\\\\\n",
+       "\t 1 & rsq  & standard & 0.02564307 & 3 & 0.01912864 & Preprocessor1\\_Model01\\\\\n",
+       "\t 6 & rmse & standard & 5.18000601 & 3 & 0.38360783 & Preprocessor1\\_Model02\\\\\n",
        "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
-       "\t 91 & rsq  & standard &  0.02385847 & 3 & 0.019465916 & Preprocessor1\\_Model19\\\\\n",
-       "\t 96 & rmse & standard & 15.24773942 & 3 & 8.141423377 & Preprocessor1\\_Model20\\\\\n",
-       "\t 96 & rsq  & standard &  0.01252513 & 3 & 0.008630338 & Preprocessor1\\_Model20\\\\\n",
+       "\t 91 & rsq  & standard & 0.03540785 & 3 & 0.01585044 & Preprocessor1\\_Model19\\\\\n",
+       "\t 96 & rmse & standard & 4.29485515 & 3 & 0.90738508 & Preprocessor1\\_Model20\\\\\n",
+       "\t 96 & rsq  & standard & 0.02327623 & 3 & 0.01547871 & Preprocessor1\\_Model20\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -487,24 +496,24 @@
        "\n",
        "| neighbors &lt;dbl&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| 1 | rmse | standard | 22.0498205 | 3 | 7.9897216 | Preprocessor1_Model01 |\n",
-       "| 1 | rsq  | standard |  0.2695403 | 3 | 0.1673395 | Preprocessor1_Model01 |\n",
-       "| 6 | rmse | standard | 17.0450682 | 3 | 6.8729549 | Preprocessor1_Model02 |\n",
+       "| 1 | rmse | standard | 4.47149293 | 3 | 0.74484142 | Preprocessor1_Model01 |\n",
+       "| 1 | rsq  | standard | 0.02564307 | 3 | 0.01912864 | Preprocessor1_Model01 |\n",
+       "| 6 | rmse | standard | 5.18000601 | 3 | 0.38360783 | Preprocessor1_Model02 |\n",
        "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
-       "| 91 | rsq  | standard |  0.02385847 | 3 | 0.019465916 | Preprocessor1_Model19 |\n",
-       "| 96 | rmse | standard | 15.24773942 | 3 | 8.141423377 | Preprocessor1_Model20 |\n",
-       "| 96 | rsq  | standard |  0.01252513 | 3 | 0.008630338 | Preprocessor1_Model20 |\n",
+       "| 91 | rsq  | standard | 0.03540785 | 3 | 0.01585044 | Preprocessor1_Model19 |\n",
+       "| 96 | rmse | standard | 4.29485515 | 3 | 0.90738508 | Preprocessor1_Model20 |\n",
+       "| 96 | rsq  | standard | 0.02327623 | 3 | 0.01547871 | Preprocessor1_Model20 |\n",
        "\n"
       ],
       "text/plain": [
-       "   neighbors .metric .estimator mean        n std_err     .config              \n",
-       "1  1         rmse    standard   22.0498205  3 7.9897216   Preprocessor1_Model01\n",
-       "2  1         rsq     standard    0.2695403  3 0.1673395   Preprocessor1_Model01\n",
-       "3  6         rmse    standard   17.0450682  3 6.8729549   Preprocessor1_Model02\n",
-       "⋮  ⋮         ⋮       ⋮          ⋮           ⋮ ⋮           ⋮                    \n",
-       "38 91        rsq     standard    0.02385847 3 0.019465916 Preprocessor1_Model19\n",
-       "39 96        rmse    standard   15.24773942 3 8.141423377 Preprocessor1_Model20\n",
-       "40 96        rsq     standard    0.01252513 3 0.008630338 Preprocessor1_Model20"
+       "   neighbors .metric .estimator mean       n std_err    .config              \n",
+       "1  1         rmse    standard   4.47149293 3 0.74484142 Preprocessor1_Model01\n",
+       "2  1         rsq     standard   0.02564307 3 0.01912864 Preprocessor1_Model01\n",
+       "3  6         rmse    standard   5.18000601 3 0.38360783 Preprocessor1_Model02\n",
+       "⋮  ⋮         ⋮       ⋮          ⋮          ⋮ ⋮          ⋮                    \n",
+       "38 91        rsq     standard   0.03540785 3 0.01585044 Preprocessor1_Model19\n",
+       "39 96        rmse    standard   4.29485515 3 0.90738508 Preprocessor1_Model20\n",
+       "40 96        rsq     standard   0.02327623 3 0.01547871 Preprocessor1_Model20"
       ]
      },
      "metadata": {},
@@ -520,7 +529,7 @@
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>16</td><td>rmse</td><td>standard</td><td>18.1727</td><td>3</td><td>5.932286</td><td>Preprocessor1_Model04</td></tr>\n",
+       "\t<tr><td>6</td><td>rmse</td><td>standard</td><td>5.180006</td><td>3</td><td>0.3836078</td><td>Preprocessor1_Model02</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -530,7 +539,7 @@
        " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
        " <dbl> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
        "\\hline\n",
-       "\t 16 & rmse & standard & 18.1727 & 3 & 5.932286 & Preprocessor1\\_Model04\\\\\n",
+       "\t 6 & rmse & standard & 5.180006 & 3 & 0.3836078 & Preprocessor1\\_Model02\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -539,12 +548,12 @@
        "\n",
        "| neighbors &lt;dbl&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| 16 | rmse | standard | 18.1727 | 3 | 5.932286 | Preprocessor1_Model04 |\n",
+       "| 6 | rmse | standard | 5.180006 | 3 | 0.3836078 | Preprocessor1_Model02 |\n",
        "\n"
       ],
       "text/plain": [
-       "  neighbors .metric .estimator mean    n std_err  .config              \n",
-       "1 16        rmse    standard   18.1727 3 5.932286 Preprocessor1_Model04"
+       "  neighbors .metric .estimator mean     n std_err   .config              \n",
+       "1 6         rmse    standard   5.180006 3 0.3836078 Preprocessor1_Model02"
       ]
      },
      "metadata": {},
@@ -571,9 +580,7 @@
    "cell_type": "markdown",
    "id": "18b877a1-e73c-42c6-8604-7242dd3c6d0c",
    "metadata": {},
-   "source": [
-    "bghjgu"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
